formulario usuario creado

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <app-navbar></app-navbar>
-<br>
-<app-comprar></app-comprar>
-<br>
-<app-ofertas></app-ofertas>
-<app-servprofesionales></app-servprofesionales>
-<app-contacto></app-contacto>
+<div class="container">
+    <br>
+    <app-comprar></app-comprar>
+
+    <br>
+    <app-ofertas></app-ofertas>
+    
+    <app-servprofesionales></app-servprofesionales>
+    <app-contacto></app-contacto>
+</div>
