--- a/src/app/registro/rsocio/sociojuridico/sociojuridico.component.html
+++ b/src/app/registro/rsocio/sociojuridico/sociojuridico.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light" style="background-color: #b1b2b3">
+<nav class="navbar navbar-light mb-5" style="background-color: #b1b2b3">
   <div class="container-fluid">
     <img
       src="assets/png/LogoMinggaN.png"
@@ -9,147 +9,238 @@
     <hr />
   </div>
 </nav>
-<br />
 
-<div class="container-fluid">
-  <h2 class="text-center">Regístrate gratis como persona jurídica</h2>
-  <hr />
-</div>
-<br />
-<br />
+<article>
+  <h2 class="text-center">Regístrate gratis como persona juridica</h2>
 
-<div class="container-fluid">
-  <div class="container-main">
-    <form autocomplete="off">
-      <div class="container">
-        <label class="l-01"> <h5>Lugar de operación</h5></label>
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingInput" placeholder="País" required="" />
-          <label for="floatingInput">País</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingInput" placeholder="Ciudad" required="" />
-          <label for="floatingInput">Ciudad</label>
-        </div>
-      </div>
-      <div class="container">
-        <label class="l-01"> <h5>Datos empresariales</h5></label>
-        <div class="form-floating mb-3">
-          <input type="text"  class="form-control"  id="floatingInput"  placeholder="Nombre empresa"  required=""  />
-          <label for="floatingInput">Nombre empresa</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="text"  class="form-control"  id="floatingInput"  placeholder="Sector de actividad"  required=""  />
-          <label for="floatingInput">Sector de actividad</label>
-        </div>
-        <div class="form-floating mb-3">
-          <select
-            class="form-select"  aria-label="Default select example"  required=""  >
-            <option selected>Tipo de documento de identidad</option>
-            <option value="1">C.C</option>
-            <option value="2">T.I</option>
-            <option value="3">Pasaporte</option>
-          </select>
-          <label for="floatingInput">Identidad.</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="text"  class="form-control"  id="floatingInput"  placeholder="N° de documento de identidad"  required=""  />
-          <label for="floatingInput">N° de documento de identidad</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="date"  class="form-control" id="floatingPassword"  placeholder="Fecha de constitución"  required=""  />
-          <label for="floatingPassword">Fecha de constitución</label  >
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="text"  class="form-control"  id="floatingInput"  placeholder="Tipo de organización"  required=""  />
-          <label for="floatingInput">Tipo de organización</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="email"  class="form-control"  id="floatingInput"  placeholder="name@example.com"  required=""  />
-          <label for="floatingInput">Correo electrónico</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required="" />
-          <label for="floatingInput">Confirmar correo electrónico</label>
-        </div>
-      </div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-      <div class="container">
-        <label class="l-01"> <h5>Representante legal</h5></label>
-        <div class="form-floating mb-3">
-          <input type="text"  class="form-control"  id="floatingInput"  placeholder="Nombres"  required=""  />
-          <label for="floatingInput">Nombres</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="text"  class="form-control"  id="floatingInput"  placeholder="Apellidos"  required=""  />
-          <label for="floatingInput">Apellidos</label>
-        </div>
-        <div class="form-floating mb-3">
-          <select
-            class="form-select"  aria-label="Default select example"  required=""  >
-            <option selected>Tipo de documento de identidad</option>
-            <option value="1">C.C</option>
-            <option value="2">T.I</option>
-            <option value="3">Pasaporte</option>
-          </select>
-          <label for="floatingInput">Identidad.</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="text"  class="form-control"  id="floatingInput"  placeholder="N° de documento de identidad"  required=""  />
-          <label for="floatingInput">N° de documento de identidad</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="email"  class="form-control"  id="floatingInput"  placeholder="name@example.com"  required=""  />
-          <label for="floatingInput">Correo electrónico</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input  type="tel" pattern="[0-9]{10}"  required=""  class="form-control"  id="floatingInput"  placeholder="N° de celular"  />
-          <label for="floatingInput">N° de celular</label>
-        </div>
-      </div>
-      <div class="container">
-        <label class="l-01"> <h5>Datos de vinculacion a Mingga</h5></label>
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingInput" placeholder="Usuario socio que te invita" />
-          <label for="floatingInput">Usuario socio que te invita</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingInput" placeholder="Crear usuario" required="" />
-          <label for="floatingInput">Crear usuario</label>
-        </div>
-          <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Crear contraseña" required="" />
-            <label for="floatingPassword">Crear contraseña</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Confirmar tu contraseña" required="" />
-            <label for="floatingPassword">Confirmar  contraseña</label>
-          </div>
-        </div>
-        <br>
-        <div class="container text-center">
-          <div class="container text-center">
-            * Cualquier información falsa o incorrecta dará lugar a la anulación de la vinculación.
-        </div>
-        </div>
-        <div class="container text-center">
-          Al hacer clic en <b>Registrarse</b>, aceptas los
-          <a href="#" class="m-0">Términos y condiciones de uso</a> de Mingga.
-        </div>
-        <div class="pt-4" style="text-align: center">
-          <button class="btn btn-primary btn-lg">Registrarse</button>
-        </div>
-        <div class="container text-center pt-4">
-          <b
-            >¿Ya tienes cuenta? <a href="" class="m-0">Inicia sesión aquí</a>
-          </b>
-        </div>
-    </form>
+    <div class="row mb-3">
+      <label class="l-01"> <h5>Lugar de operación</h5></label>
+      <mat-form-field appearance="outline" class="col">
+        <mat-label>País</mat-label>
+        <mat-select (selectionChange)="onPaisChange($event)" formControlName="CountryId" disableRipple>
+          <mat-option *ngFor="let item of paises" [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
-  </div>
-      <br />
-          <!-- <div style="padding-top: 1rem;">
-                <a href="#">¿Has olvidado la  contraseña?</a>
-            </div> -->
-  <app-contacto></app-contacto>
 
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+        <mat-label>Ciudad</mat-label>
+        <mat-select formControlName="CityId" disableRipple>
+          <mat-option *ngFor="let item of ciudades" [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <label class="l-01"> <h5>Datos Empresariales</h5></label>
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Nombre empresa</mat-label>
+          <input matInput type="text" formControlName="nombres" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['nombres']?.invalid && (form.controls['nombres']?.dirty || form.controls['nombres']?.touched)">
+              <span *ngIf="form.controls['nombres']?.errors?.['required']">Nombres es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+    <!-- Sector de actividad -->
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+        <mat-label>Sector de actividad----------</mat-label>
+        <mat-select formControlName="sActividad" disableRipple>
+          <mat-option *ngFor="let item of ciudades" [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+        <mat-label>Tipo de documento</mat-label>
+        <mat-select formControlName="DocumentTypeIEmp" disableRipple>
+          <mat-option *ngFor="let item of documentoJ" [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Número de Documento</mat-label>
+          <input matInput type="text" formControlName="documentNumberEmp" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['documentNumberEmp']?.invalid && (form.controls['documentNumberEmp']?.dirty || form.controls['documentNumberEmp']?.touched)">
+              <span *ngIf="form.controls['documentNumberEmp']?.errors?.['required']">Número de Documento es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Fecha de constitución (YYYY/MM/DD)</mat-label>
+					<input
+            matInput
+            [matDatepicker]="datepicker"
+            datePickerFormat="YYYY/MM/DD"
+            formControlName="birthDate"
+          >
+					<mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+					<mat-datepicker #datepicker></mat-datepicker>
+          <mat-error *ngIf="form.controls['birthDate']?.invalid && (form.controls['birthDate']?.dirty || form.controls['birthDate']?.touched)">
+              <span *ngIf="form.controls['birthDate']?.errors?.['required']">Apellidos es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+        <mat-label>Tipo de organización</mat-label>
+        <mat-select formControlName="AdditionalTypeId" disableRipple>
+          <mat-option *ngFor="let item of genero" [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Correo electrónico</mat-label>
+          <input matInput type="text" formControlName="email" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['email']?.invalid && (form.controls['email']?.dirty || form.controls['email']?.touched)">
+              <span *ngIf="form.controls['email']?.errors?.['required']">Número de Documento es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+
+    <div class="row mb-3">
+      <label class="l-01"> <h5>Representante legal</h5></label>
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Nombres</mat-label>
+          <input matInput type="text" formControlName="nombres" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['nombres']?.invalid && (form.controls['nombres']?.dirty || form.controls['nombres']?.touched)">
+              <span *ngIf="form.controls['nombres']?.errors?.['required']">Nombres es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Apellidos</mat-label>
+          <input matInput type="text" formControlName="nombres" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['nombres']?.invalid && (form.controls['nombres']?.dirty || form.controls['nombres']?.touched)">
+              <span *ngIf="form.controls['nombres']?.errors?.['required']">Nombres es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+        <mat-label>Tipo de documento </mat-label>
+        <mat-select formControlName="DocumentTypeId" disableRipple>
+          <mat-option *ngFor="let item of documento" [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Número de Documento</mat-label>
+          <input matInput type="text" formControlName="documentNumber" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['documentNumber']?.invalid && (form.controls['documentNumber']?.dirty || form.controls['documentNumber']?.touched)">
+              <span *ngIf="form.controls['documentNumber']?.errors?.['required']">Número de Documento es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Correo electrónico</mat-label>
+          <input matInput type="text" formControlName="emailEmp" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['emailEmp']?.invalid && (form.controls['emailEmp']?.dirty || form.controls['emailEmp']?.touched)">
+              <span *ngIf="form.controls['emailEmp']?.errors?.['required']">Número de Documento es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>N° de celular</mat-label>
+          <input matInput type="text" formControlName="phone" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['phone']?.invalid && (form.controls['phone']?.dirty || form.controls['phone']?.touched)">
+              <span *ngIf="form.controls['phone']?.errors?.['phone']">Nickname es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <div class="row mb-3">
+      <label class="l-01"> <h5>Datos de Vinculación a MingaRMB</h5></label>
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Nickname usuario que te invita (Campo no obligatorio)*</mat-label>
+          <input matInput type="text" formControlName="Partner" autocomplete="disabled">
+      </mat-form-field>
+    </div>
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Crea tu nickname</mat-label>
+          <input matInput type="text" formControlName="username" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['username']?.invalid && (form.controls['username']?.dirty || form.controls['username']?.touched)">
+              <span *ngIf="form.controls['username']?.errors?.['username']">Nickname es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Crea tu contraseña</mat-label>
+          <input matInput type="password" formControlName="password" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['password']?.invalid && (form.controls['password']?.dirty || form.controls['password']?.touched)">
+              <span *ngIf="form.controls['password']?.errors?.['password']">Contraseña es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="row mb-3">
+      <mat-form-field appearance="outline" class="col">
+          <mat-label>Confirma tu contraseña</mat-label>
+          <input matInput type="password" formControlName="password" autocomplete="disabled">
+          <mat-error *ngIf="form.controls['password']?.invalid && (form.controls['password']?.dirty || form.controls['password']?.touched)">
+              <span *ngIf="form.controls['password']?.errors?.['password']">Confirmar contraseña es requerido</span>
+          </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <button class="mb-5" type="submit" color="primary" mat-raised-button>Crear</button>
+
+    <pre>
+      {{ form.value | json }}
+    </pre>
+
+  </form>
+</article>
